@@ -4790,3 +4790,7 @@ Changelog for GXemul:
 20181026	Some cleanup and refactoring of the O2 rendering engine and 
 		other things.
 		ARCS environment fixes (better values for diskless booting).
+20181030	Updating NetBSD/sgimips guest OS instructions to version 8.0.
+		Some progress on the hw accelerated graphics operations used
+		by NetBSD/sgimips' Xorg driver.
+
